--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.login-signup-row {
+  justify-content: center;
+}
+
+.create-account-text:hover {
+  cursor: pointer;
+}
+
+.create-account-text {
+  margin-top: 10px;
+}
+
+.form-error {
+  font-size: 12px;
+  color: red;
+}
